# hms2cng

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.claude/rules/: clb-engineering-recommendation.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: data-reference.md  index.md  requirements-docs.txt  roadmap.md
docs/about/: clb-engineering.md
docs/api/: index.md
docs/examples/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/overrides/: main.html
examples/: 00_using_hms_examples.py  01_export_geometry.py  02_export_results.py  03_duckdb_query.py  04_generate_pmtiles.py  05_multi_run_comparison.py  06_full_project_export.py
hms2cng/: __init__.py  catalog.py  cli.py  duckdb_session.py  geometry.py  pmtiles.py  postgis_sync.py  project.py  results.py
hmscmdr_parquet/: __init__.py  cli.py  geometry.py  pmtiles.py  postgis_sync.py  results.py
tests/: conftest.py  test_geometry.py  test_integration.py  test_project.py  test_results_xml.py
