[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hms2cng"
version = "0.1.0"
description = "HMS to Cloud Native GIS — CLI for exporting HEC-HMS results to GeoParquet, PMTiles, DuckDB, and PostGIS"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "William M. Katzenmeyer, P.E., C.F.M.", email = "bill@clbengineering.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
]
keywords = ["HEC-HMS", "GeoParquet", "PMTiles", "hydrology", "GIS", "cloud-native", "DuckDB"]
dependencies = [
    "hms-commander>=0.2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
duckdb = [
    "duckdb>=1.4.0",
]
postgis = [
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.14.0",
    "psycopg[binary]>=3.2.0",
]
pmtiles = [
    # NOTE: the PyPI "tippecanoe" package is a Python wrapper and does *not* ship the CLI.
    # Install the CLI separately (e.g. conda-forge) for `hms2cng pmtiles`.
    "rasterio>=1.3.0",
]
dev = [
    "pytest>=8.0.0",
    "marimo>=0.9.0",
    "twine>=5.0.0",
    "build>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]
all = [
    "duckdb>=1.4.0",
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.14.0",
    "psycopg[binary]>=3.2.0",
    "rasterio>=1.3.0",
]

[project.scripts]
hms2cng = "hms2cng.cli:app"

[project.urls]
Homepage = "https://github.com/gpt-cmdr/hms2cng"
Repository = "https://github.com/gpt-cmdr/hms2cng"

[tool.setuptools.packages.find]
where = ["."]
include = ["hms2cng*"]

[tool.uv.sources]
hms-commander = { path = "../hms-commander", editable = true }

[tool.pytest.ini_options]
markers = [
    "integration: mark test as requiring real HMS data on disk",
]
addopts = "-v"
